# doskvol-ltd

./: .gitignore  Cargo.toml  Dioxus.toml  blades.db  diesel.toml  input.css  package.json
api/: Cargo.toml
api/src/: character_updates.rs  client.rs  lib.rs
api/src/auth/: mod.rs  session.rs
api/src/character/: mod.rs  updates.rs
api/src/crew/: mod.rs
api/src/db/: character.rs  crew.rs  mod.rs  models.rs  schema.rs
api/src/db/models/: characters.rs  crews.rs  mod.rs  users.rs
data/: Cargo.toml
data/blades/: class_items.json  contacts.json  playbook.json
data/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/src/views/: auth.rs  character.rs  crew.rs  home.rs  mod.rs
migrations/2025-08-28-132532_users/: up.sql
migrations/2025-08-28-134646_crews/: down.sql  up.sql
migrations/2025-08-29-213628_characters/: down.sql  up.sql
migrations/2025-09-03-122511_crew_invites/: down.sql  up.sql
migrations/2025-09-03-154943_sessions/: up.sql
mobile/src/: main.rs
src/: elements.rs  main.rs
src/auth/: mod.rs  register.rs
src/character/: center.rs  create.rs  left.rs  mod.rs  right.rs
src/crew/: create.rs  mod.rs
src/views/: auth.rs  character.rs  crew.rs  home.rs  join_crew.rs  mod.rs
types/: Cargo.toml
types/src/: bitflag_count.rs  description.rs  lib.rs
types/src/character/: harm_armor.rs  mod.rs  traits.rs  xp.rs
types/src/crew/: mod.rs
ui/: Cargo.toml
ui/assets/blades/: abilities.json
ui/src/: character.rs  common.rs  elements.rs  lib.rs
ui/src/auth/: mod.rs  register.rs
ui/src/character/: center.rs  create.rs  left.rs  mod.rs  right.rs
ui/src/crew/: create.rs  mod.rs
web/: Cargo.toml
web/src/: main.rs
web/src/views/: character.rs  crew.rs  home.rs
