[workspace]
resolver = "2"
members = ["ui", "web", "desktop", "mobile", "api", "data", "types"]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
diesel = { version = "2.2.0", features = ["sqlite"] }

# workspace
ui = { path = "ui" }
api = { path = "api" }
data = { path = "data" }
types = { path = "types" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
