[package]
authors = ["Miitto <wpbickerton@gmail.com>"]
edition = "2021"
name = "doskvol-ltd"
version = "0.1.0"

[workspace]
members = ["api", "data", "types"]

[workspace.dependencies]
dioxus = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.41"
diesel = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", features = ["bundled"] }
totp-rs = { version = "5.7.0", features = ["qr", "serde_support"] }

# workspace
api = { path = "api" }
data = { path = "data" }
types = { path = "types" }

[dependencies]
dioxus = { workspace = true, features = ["router"] }
api.workspace = true
types.workspace = true
tracing.workspace = true

[features]
desktop = ["dioxus/desktop", "api/desktop"]
server = ["dioxus/server", "api/server"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
