[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
tracing.workspace = true
serde.workspace = true

types.workspace = true

axum = { version = "0.8.4", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
tower-http = { version = "0.6.6", features = ["auth"], optional = true }
async-trait = { version = "0.1.89", optional = true }
http = { version = "1.3.1", optional = true }
tower = { version = "0.5.2", optional = true }
anyhow = "1.0.99"
dotenvy = { version = "0.15.7", optional = true }

diesel = { version = "2.2.0", features = ["sqlite"], optional = true }

[features]
default = ["server"]
server = [
  "dep:diesel",
  "dep:dotenvy",
  "types/server",
  "dep:axum",
  "dep:tokio",
  "dep:tower-http",
  "dep:async-trait",
  "dep:http",
  "dep:tower",
]
