[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
dioxus-fullstack = { version = "0.6.0", optional = true }
tracing.workspace = true
serde.workspace = true

data.workspace = true

types.workspace = true

futures = { version = "0.3.0", optional = true }
axum = { version = "0.8.4", optional = true }
axum-extra = { version = "0.10.0", optional = true, features = ["cookie"] }
tokio = { version = "1.47.1", features = ["full"], optional = true }
tower-http = { version = "0.6.6", features = ["auth"], optional = true }
async-trait = { version = "0.1.89", optional = true }
http = { version = "1.3.1", optional = true }
tower = { version = "0.5.2", optional = true }
dotenvy = { version = "0.15.7", optional = true }
totp-rs.workspace = true
nanoid = { version = "0.4.0", optional = true }
cookie = { version = "0.18.0", optional = true, features = ["percent-encode"] }

diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
], optional = true }
libsqlite3-sys = { version = ">=0.30.1,<0.36.0", optional = true, features = [
  "bundled",
] }

[features]
server = [
  "dep:diesel",
  "dep:libsqlite3-sys",
  "dep:dotenvy",
  "types/server",
  "dep:axum",
  "dep:dioxus-fullstack",
  "dioxus-fullstack/axum",
  "dep:axum-extra",
  "dep:tokio",
  "dep:tower-http",
  "dep:async-trait",
  "dep:http",
  "dep:futures",
  "dep:tower",
  "dep:cookie",
  "dep:nanoid",
  "totp-rs/gen_secret",
]
desktop = ["dep:http"]
debug = []
