[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
api = { workspace = true }
ui = { workspace = true }
types = { workspace = true }

[features]
default = []
desktop = ["dioxus/desktop", "api/desktop"]
server = ["dioxus/server", "api/server"]
