[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
data.workspace = true
bitflags = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing.workspace = true

rusqlite = { version = "0.37.0", optional = true }

[features]
server = ["dep:rusqlite"]
