[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
data.workspace = true
bitflags = { version = "2.9", features = ["serde"] }
serde.workspace = true
tracing.workspace = true

diesel = { version = "2.2.0", features = ["sqlite"], optional = true }

[features]
server = ["dep:diesel"]
